--- a/Deicide/Deicide.vcxproj.filters
+++ b/Deicide/Deicide.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="..\include\simple_logger.h">
       <Filter>Header</Filter>
     </ClInclude>
+    <ClInclude Include="entity.h">
+      <Filter>Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\game.c">
@@ -50,6 +53,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\simple_logger.c">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="entity.c">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
